Bug 562181 - Add support for MozOrientation on Qt. r=dougt